# work

./: .gitignore  apply_css.py  css_analysis_report.txt  css_refactor_plan.md  pyproject.toml  refactor_output.txt  requirements.txt  run.bat  run.sh  setup.py
src/talabat_wallet/: __init__.py  database.py  engine.py  main.py  models.py  styles.tcss  utils.py  verify_fix.py  verify_midnight.py
src/talabat_wallet/ui/: add_order.py  calendar_screen.py  components.py  dashboard.py  history.py  settings.py  settlement.py  shift.py  wallet.py
src/talabat_wallet/ui2/: add_order.py  components.py  dashboard.py  history.py  settings.py  settlement.py  shift.py  wallet.py  window.py
unused_files/: check_schema.py  debug_absent.py  debug_shifts.py  reproduce_add_fail.py  verify_overlap.py
unused_files/ui/: calendar_screen.py  settlement.py  shift.py
